--- a/style.css
+++ b/style.css
@@ -38,10 +38,6 @@ body {
       top: 4%;
      
   }
-  .navbar a{
-    color: white;
-
-  }
   .navbar a:hover{
     color: rgba(221, 193, 34, 0.899);
   }
@@ -57,8 +53,6 @@ body {
   .card-title{
     font-size: xx-large;
     text-align: center;
-
-
   }
   .card-text{
     font-size: x-large;
@@ -85,7 +79,9 @@ body {
   }
 
 .card{
+  margin-top: 25%;
   padding-left: 0;
+  margin-right: 20%;
   color: rgba(221, 193, 34, 0.899);
   border-radius: 10%;
   transition: transform 0.3s ease-in-out;
@@ -128,9 +124,9 @@ element.style {
 .social a{
   margin-right: 3%;
   text-decoration: none;
+  
 }
 .card-body{
-  min-width: fit-content;
   min-height: fit-content;
   margin-bottom: 10%;
 }
@@ -141,20 +137,22 @@ i:hover{
   color: rgba(251, 223, 8, 0.899);
 }
 #skillhead{
-  background-image: url(Images/newbg.jpg);
   border-radius: 5%;
   text-align: center;
   font-size: 1.8rem;
-  color: rgb(255, 255, 255);
-  text-shadow: 0.5px 1px rgb(130, 130, 130);
   margin-top: 0%;
  
 }
+.skills-list{
+display:flex;
+justify-content: center;
+align-content: center;
+
+}
 .skills-list img{
   height: 60px;
-  width: 60px;
+  width: 60px; 
 }
 #Skills {
-margin-right: 60px;
 margin-bottom: 10%;
 }
