--- a/style.css
+++ b/style.css
@@ -1,147 +1,189 @@
 
 .navbar-nav{
-    text-align: right;
+  text-align: right;
 }
 body {
-    
-    font-family: "Sofia", sans-serif;
-    font-size:xx-large ;
-    text-align:right ;
-    background-image: url(./Images/photo-1510936111840-65e151ad71bb.avif);
-    background-size:contain;
-  }
-  nav{
-    font-size:x-large ;
-    color: white;
-    background-image: url(./Images/photo-1510936111840-65e151ad71bb.avif);
-  }
-  section{
-    padding-top: 15%;
-    padding-left: 50%;
-    padding-right: 10%;
-    color: rgb(208, 207, 185);
-  }
   
-  .navbar-nav {
-    position: fixed;
-      right: 10%;
-      top: 4%;
-      z-index: 9999;
-  }
-  .navbar-nav a{
-    color: white;
+  font-family: "Sofia", sans-serif;
+  font-size:xx-large ;
+  text-align:right ;
+  background-image: url(./Images/photo-1510936111840-65e151ad71bb.avif);
+  background-size:contain;
+}
 
-  }
-  .navbar-left{
-    position: fixed;
-      left:7%;
-      top: 4%;
-     
-  }
-  .navbar a:hover{
-    color: rgba(221, 193, 34, 0.899);
-  }
-  .navbar-brand{
-    font-size: x-large;
-  }
-  .navbar-brand a{
-    align-content: start;
-    position: fixed;
-      left: 0;
-      top: 0;
-  }
-  .card-title{
-    font-size: xx-large;
-    text-align: center;
-  }
-  .card-text{
-    font-size: x-large;
-    text-align: center;
-    padding: 10px;
-    padding-bottom: 0%;
-    overflow: auto;
-   color: rgb(208, 207, 185)
-  }
-  .card::before {
-    content: "";
-    position: absolute;
-    top: 0;
+#clockContainer{  
+  position: relative;
+  margin-top: 10%;
+  margin-left: 60%;
+  margin-bottom: 10%;
+  height: 40vw;
+  width: 40vw; 
+  background: url(./Images/clock.png) no-repeat;
+  background-size: 100%;
+}
+
+#hour, #minute, #second{
+  position: absolute;
+  background: black;
+  border-radius: 10px; 
+  transform-origin: bottom;
+}
+#hour{
+  width: 1.8%;
+  height: 25%;
+  top: 25%;
+  left: 48.85%;
+  opacity: 0.8;  
+}
+#minute{
+  width: 1.6%;
+  height: 30%;
+  top: 19%;
+  left: 48.9%;
+  opacity: 0.8;  
+}
+#second{
+  width: 1%;
+  height: 40%;
+  top: 9%;
+  left: 49.25%;
+  opacity: 0.8; 
+  
+}
+
+.master1{
+}
+nav{
+  font-size:x-large ;
+  color: white;
+  background-image: url(./Images/photo-1510936111840-65e151ad71bb.avif);
+}
+section{
+  margin-left: 33%;
+  margin-top: 0%;
+  margin-right: 10%;
+  color: rgb(208, 207, 185);
+}
+
+.navbar-nav {
+  position: fixed;
+    right: 10%;
+    top: 4%;
+    z-index: 9999;
+}
+.navbar-nav a{
+  color: white;
+
+}
+.navbar-left{
+  position: fixed;
+    left:7%;
+    top: 4%;
+   
+}
+.navbar a:hover{
+  color: rgba(221, 193, 34, 0.899);
+}
+.navbar-brand{
+  font-size: x-large;
+}
+.navbar-brand a{
+  align-content: start;
+  position: fixed;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    z-index: -1;
-  }
-  .card:hover::before {
-    opacity: 1;
-  }
+    top: 0;
+}
+.card-title{
+  font-size: xx-large;
+  text-align: center;
+}
+.card-text{
+  font-size: x-large;
+  text-align: center;
+  padding: 10px;
+  padding-bottom: 0%;
+  overflow: auto;
+ color: rgb(208, 207, 185)
+}
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  z-index: -1;
+}
+.card:hover::before {
+  opacity: 1;
+}
 
 .card{
-  margin-top: 25%;
-  padding-left: 0;
-  margin-right: 20%;
-  color: rgba(221, 193, 34, 0.899);
-  border-radius: 10%;
-  transition: transform 0.3s ease-in-out;
-  background-image: url(./Images/newbg.jpg);
+margin-top: 25%;
+padding-left: 0;
+margin-right: 20%;
+color: rgba(221, 193, 34, 0.899);
+border-radius: 10%;
+transition: transform 0.3s ease-in-out;
+background-image: url(./Images/newbg.jpg);
 }
 .card :hover{
-  transform: scale(1.1);
+transform: scale(1.1);
 }
 
 .row{
-  margin-left: 33%;
-  padding-top: 45%;
-  padding-bottom:20%;
+margin-left: 33%;
+padding-bottom:20%;
 }
 .w3-padding-16{
-  color: rgba(221, 193, 34, 0.899);
+color: rgba(221, 193, 34, 0.899);
 }
 .w3-wide{
-  color: rgb(208, 207, 185)
+color: rgb(208, 207, 185)
 }
 .w3-light-grey{
-  color: white;
+color: white;
 }
 .w3-container w3-center w3-padding-small w3-dark-grey{
-  color: white;
+color: white;
 }
 element.style {
-  width: 95%;
+width: 95%;
 }
 .card .btn {
-  padding-top: 0%;
-  margin-right: 39%;
-  
+padding-top: 0%;
+margin-right: 39%;
+
 }
 .social{
-  margin-right: 43%;
-  margin-left: 10%;
-  margin-bottom: 3%;
+margin-right: 43%;
+margin-left: 10%;
+margin-bottom: 3%;
 }
 .social a{
-  margin-right: 3%;
-  text-decoration: none;
-  
+margin-right: 3%;
+text-decoration: none;
+
 }
 .card-body{
-  min-height: fit-content;
-  margin-bottom: 10%;
+min-height: fit-content;
+margin-bottom: 10%;
 }
 i{
-  color: rgb(255, 255, 255);
+color: rgb(255, 255, 255);
 }
 i:hover{
-  color: rgba(251, 223, 8, 0.899);
+color: rgba(251, 223, 8, 0.899);
 }
 #skillhead{
-  border-radius: 5%;
-  text-align: center;
-  font-size: 1.8rem;
-  margin-top: 0%;
- 
+border-radius: 5%;
+text-align: center;
+font-size: 1.8rem;
+margin-top: 0%;
+
 }
 .skills-list{
 display:flex;
@@ -150,8 +192,8 @@ align-content: center;
 
 }
 .skills-list img{
-  height: 60px;
-  width: 60px; 
+height: 60px;
+width: 60px; 
 }
 #Skills {
 margin-bottom: 10%;
